--- a/proyectos.html
+++ b/proyectos.html
@@ -59,7 +59,15 @@
   <h1>Proyectos</h1>
 
   <div class="project">Proyecto 1: Página web de ejemplo</div>
-  <div class="project">Proyecto 2: Aplicación interactiva</div>
+  <div class="project">
+    <h2>Proyecto 2: Escena 3D</h2>
+    <p>Escenario 3D de unas fresas hechas en Blender.</p>
+    <model-viewer src="modelos/fresas.glb"
+              auto-rotate camera-controls
+              exposure="1" shadow-intensity="1"
+              style="width: 500px; height: 500px;">
+</model-viewer>
+  </div>
 
   <div class="project">
     <h2>Proyecto 3: Modelo 3D</h2>
@@ -69,7 +77,6 @@
               exposure="1" shadow-intensity="1"
               style="width: 500px; height: 500px;">
 </model-viewer>
-
   </div>
 
   <a href="menu.html">🌸 Volver al Menú</a>
