--- a/proyectos.html
+++ b/proyectos.html
@@ -60,14 +60,14 @@
 
   <div class="project">Proyecto 1: Página web de ejemplo</div>
   <div class="project">
-    <img src="img/render-habitacion.jpg" alt="Proyecto 2">
+    <img src="img/render-habitacion.png" alt="Proyecto 2">
     <div class="project-text">
       <h2>Proyecto 2: Escena de fresas 3D</h2>
       <p>Una composición colorida de fresas modeladas en Blender con estilo low poly y materiales simples
     </div>
   </div>
   <div class="project">
-    <img src="img/render-fresas.jpg" alt="Proyecto 2">
+    <img src="img/render-fresas.png" alt="Proyecto 2">
     <div class="project-text">
       <h2>Proyecto 3: Habitación 3D hecha en Blender</h2>
       <p>Una escena de una habitación modelada con materiales procedurales en low poly.</p>
