--- a/proyectos.html
+++ b/proyectos.html
@@ -15,7 +15,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 2rem 1rem; /* espacio para scroll */
+      padding: 2rem 1rem; 
     }
 
     h1 {
