--- a/proyectos.html
+++ b/proyectos.html
@@ -102,7 +102,7 @@
     <img src="img/render-fresas.png" alt="Proyecto 2">
     <div>
       <h2>Proyecto 2: Escena de fresas 3D</h2>
-      <p>Una composición colorida de fresas modeladas en Blender con estilo low poly y materiales simples.</p>
+      <p>Una composición de fresas modeladas en Blender con estilo low poly y materiales simples.</p>
     </div>
   </div>
 
