--- a/proyectos.html
+++ b/proyectos.html
@@ -108,7 +108,7 @@
   </div>
 
   <div class="project">
-    <img src="img/render-habitacion.png" alt="Proyecto 3">
+    <img src="img/render-escena.png" alt="Proyecto 3">
     <div>
       <h2>Proyecto 3: Habitación 3D hecha en Blender</h2>
       <p>Una escena de una habitación modelada con materiales procedurales en low poly.</p>
