--- a/proyectos.html
+++ b/proyectos.html
@@ -93,9 +93,11 @@
   <h1>Proyectos</h1>
 
   <div class="project">
+    <img src="img/Wumpus.png" alt="Proyecto 1">
     <div>
-      <h2>Proyecto 1: Página web de ejemplo</h2>
-      <p>Un proyecto de diseño web sencillo para mostrar estructura y estilo.</p>
+      <h2>Proyecto 1: Juego 'Hunt the Wumpus'</h2>
+      <p>Este juego simula el clásico Wumpus en un tablero donde un agente juega automáticamente. El objetivo es que el agente encuentre el oro evitando hoyos y al Wumpus, mostrando cada movimiento en tiempo real. Puedes jugar aquí.</p>
+      <a href="https://hub.2i2c.mybinder.org/user/0nlydust-wumpus-ede8x5s7/doc/tree/Wumpus.ipynb" target="_blank" rel="noopener">👾 Wumpus</a>
     </div>
   </div>
 
