--- a/proyectos.html
+++ b/proyectos.html
@@ -97,7 +97,7 @@
     <div>
       <h2>Proyecto 1: Juego 'Hunt the Wumpus'</h2>
       <p>Este juego simula el clásico Wumpus en un tablero donde un agente juega automáticamente. El objetivo es que el agente encuentre el oro evitando hoyos y al Wumpus, mostrando cada movimiento en tiempo real. Puedes jugar aquí.</p>
-      <a href="https://hub.2i2c.mybinder.org/user/0nlydust-wumpus-ede8x5s7/doc/tree/Wumpus.ipynb" target="_blank" rel="noopener">👾 Wumpus</a>
+      <a href="https://github.com/0nlyDust/Wumpus" target="_blank" rel="noopener">👾 Wumpus</a>
     </div>
   </div>
 
