--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       height: 100vh;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       text-align: center;
       background: linear-gradient(135deg, #ffffff, #ffb6c1);
