--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -55,7 +55,7 @@
   
   <img src="img/foto.png" style="width:150px; height:auto; border-radius:50%; margin-top:1rem; border: 3px solid #ffb6c1;" class="profile-photo">
   
-  <p>Hola, soy María, estudiante de ingeniería informática. Me apasiona la programación y la creación de soluciones eficientes y disfruto aprender sobre nuevas tecnologías como inteligencia artificial y machine learning.</p>
+  <p>Hola, soy María, estudiante de ingeniería informática. Me apasionan la programación y el dibujo y creo que la curiosidad y la creatividad son clave para crecer.</p>
   <a href="menu.html">🌸 Volver al Menú</a>
 </body>
 </html>
