--- a/proyectos.html
+++ b/proyectos.html
@@ -96,7 +96,7 @@
     <img src="img/Wumpus.png" alt="Proyecto 1">
     <div>
       <h2>Proyecto 1: Juego 'Hunt the Wumpus'</h2>
-      <p>Este juego simula el clásico Wumpus en un tablero donde un agente juega automáticamente. El objetivo es que el agente encuentre el oro evitando hoyos y al Wumpus, mostrando cada movimiento en tiempo real. Puedes jugar aquí.</p>
+      <p>Este juego simula el clásico Wumpus en un tablero donde un agente juega automáticamente. El objetivo es que el agente encuentre el oro evitando hoyos y al Wumpus, mostrando cada movimiento en tiempo real.</p>
       <a href="https://github.com/0nlyDust/Wumpus" target="_blank" rel="noopener">👾 Wumpus</a>
     </div>
   </div>
