--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -15,7 +15,7 @@
       height: 100vh;
       display: flex;
     flex-direction: column;
-    justify-content: center; /* centra verticalmente */
+    justify-content: center;
     align-items: center;
     }
     h1 {
@@ -28,11 +28,11 @@
     p {
       max-width: 600px;
       margin: 2rem auto;
-      padding: 1rem;        /* 🔹 separa el texto dentro del párrafo */
+      padding: 1rem;
       font-size: 1.2rem;
       line-height: 1.6;
-      background: rgba(255, 255, 255, 0.5); /* opcional: caja suave detrás del texto */
-      border-radius: 10px;  /* opcional: esquinas redondeadas */
+      background: rgba(255, 255, 255, 0.5);
+      border-radius: 10px;
     }
     a {
       display: inline-block;
@@ -55,7 +55,7 @@
   
   <img src="img/foto.png" style="width:150px; height:auto; border-radius:50%; margin-top:1rem; border: 3px solid #ffb6c1;" class="profile-photo">
   
-  <p>Hola, soy María, estudiante de ingeniería informática.Me apasionan la programación y el dibujo y creo que la curiosidad y la creatividad son clave para crecer.</p>
+  <p>Hola, soy María, estudiante de ingeniería informática. Me apasionan la programación y el dibujo y creo que la curiosidad y la creatividad son clave para crecer.</p>
   <a href="menu.html">🌸 Volver al Menú</a>
 </body>
 </html>
