Actualizar contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -15,7 +15,7 @@
       height: 100vh;
       display: flex;
     flex-direction: column;
-    justify-content: center; /* centra verticalmente */
+    justify-content: center;
     align-items: center;
     }
 
@@ -34,10 +34,9 @@
       line-height: 1.5;
     }
 
-    /* Enlaces tipo botón como en el menú */
     section a {
       display: block;
-      position: relative;   /* asegura clics */
+      position: relative;
       z-index: 1;
       cursor: pointer;
       margin: 1rem auto;
