Actualizar menu.html

--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
       text-align: center;
       display: flex;
       flex-direction: column;
-      justify-content: center; /* centra verticalmente */
+      justify-content: center;
       align-items: center;
     }  
 
