--- a/proyectos.html
+++ b/proyectos.html
@@ -15,7 +15,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 2rem 1rem; /* espacio para scroll */
+      padding: 2rem 1rem;
     }
 
     h1 {
@@ -73,7 +73,6 @@
     }
 
     @media (min-width: 768px) {
-      /* Texto al lado de la imagen en pantallas grandes */
       .project {
         display: flex;
         gap: 2rem;
